fix(agenda): place away crest before team name on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1147,6 +1147,10 @@ body::after {
         white-space: normal;
     }
 
+    .agenda-team:last-child img {
+        order: -1;
+    }
+
     .agenda-match-card__footer {
         flex-direction: column;
         align-items: center;
